Bug 145689 - Page style reverts to default when inserting a nested table (steps in comment 4)
Summary: Page style reverts to default when inserting a nested table (steps in comment 4)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: low minor
Assignee: Justin L
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Writer-Styles-Page Writer-Tables-Nested
  Show dependency treegraph
 
Reported: 2021-11-15 02:06 UTC by Peter
Modified: 2025-09-17 00:26 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
145689_lostPageStyle.odt: example file (14.88 KB, application/vnd.oasis.opendocument.text)
2025-09-01 21:31 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter 2021-11-15 02:06:44 UTC
Steps to reproduce:

1. Create a new Writer document
2. Using "New Style from Selection", create a new page style named "Pink Page".
3. Modify "Pink Page": Area -> Color -> set a pink background.  This will make the page style stand out.
4. Change the current page to the "Pink Page" page style.  The page turns pink.
5. Add a table to the document.  The page remains pink.
6. Click in a table cell and insert a new nested table.  The page turns white, because the page reverted to the default page style.  It should have remained pink.
Comment 1 Peter 2021-11-15 02:34:39 UTC
After some additional testing, it looks like it only happens if the nested table is created in the upper left cell of the original table.  The page style does not change if the nested table is created in any other cell.
Comment 2 Dieter 2021-11-30 16:35:25 UTC
I confirm it with

Version: 7.2.3.2 (x64) / LibreOffice Community
Build ID: d166454616c1632304285822f9c83ce2e660fd92
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 3 QA Administrators 2023-12-01 03:15:40 UTC Comment hidden (obsolete)
Comment 4 Dieter 2023-12-09 09:41:27 UTC
Still present in

Version: 7.6.3.2 (X86_64) / LibreOffice Community
Build ID: 29d686fea9f6705b262d369fede658f824154cc0
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (de_DE); UI: en-GB
Calc: CL threaded

Simplified steps:
1. Create a new Writer document
2. Choose any page style different than default
3. Insert a table.
4. Click in a table cell A1 and insert a new nested table.

Actual result
Page Style changes to default page style.

Expected result
Page style should remain.
Comment 5 Justin L 2025-09-01 21:29:41 UTC
This is very similar to bug 92714.

The program fails to transfer the RES_PAGEDESC to the inserted, nested table.
Comment 6 Justin L 2025-09-01 21:31:34 UTC
Created attachment 202650 [details]
145689_lostPageStyle.odt: example file
Comment 7 Commit Notification 2025-09-17 00:26:14 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6ef29b80c973d197f2ffeb05f0ace78369893fe7

tdf#145689 sw: transfer breaks to table-in-table

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.