tdf#145689 sw: transfer breaks to table-in-table

A table is allowed to specify a page break.

If a table-in-table is the first thing in cell A1,
then (only) that table-in-table is checked for the page breaks,
so transfer page breaks when inserting a table-in-table.

make CppunitTest_sw_htmlimport CPPUNIT_TEST_NAME=testTdf155011

Change-Id: Iae6d54aa2c7c33e07cdd235ff347a9d0fde3dc65
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191050
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins